# ai-filer

./: .cursorignore  .env.example  .gitignore  LICENSE  PRD.md  README.md  Taskfile.yaml  pyproject.toml
.cursor/rules/: ai-filer.mdc
docs/: flow.md
src/ai_filer/: __init__.py  __main__.py  ai.py  file_manager.py  main.py  ocr.py  types.py
src/ai_filer/prompts/: classify.txt  describe.txt  perform_ocr.txt  summarize.txt  summarize_local.txt
src/ai_filer/providers/: base_provider.py  gemini_provider.py  ocr.py  ollama_provider.py  openai_provider.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  task_016.txt  task_017.txt  tasks.json
